[package]
name = "wasmkeygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
lazy_static = "1.4.0"
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }
zeroize = "1.7.0"
